src/components/layout/styles.styl
@import '../../style/media.styl'
@import '../../style/utils.styl'

$paddingTop = pxToRem(11)
$paddingLeft = pxToRem(17)

$paddingTopM = pxToRem(7)
$paddingLeftM = pxToRem(6)

.layout
  padding: $paddingTop $paddingLeft
  +mobile()
    padding: $paddingTopM $paddingLeftM

.layoutAbout
  +mobile()
    padding: $paddingTopM $paddingLeftM pxToRem(71)
    position: relative
    .copyright
      position: absolute

//.layoutProjectOpen
  //cursor: url(/assets/x.svg), auto

.top
  display: flex
  justify-content: space-between

.home
  position: fixed
  left: $paddingLeft
  top: $paddingTop
  line-height: (35 / 40)
  z-index: 10
  +mobile()
    position: static

.blog
  position: fixed
  right: $paddingLeft
  top: $paddingTop
  +mobile()
    position: static
    top: $paddingTopM
    right: $paddingLeftM

.copyright
.copyrightUnderProject
  position: fixed
  left: $paddingLeft
  bottom: $paddingTop

.copyright
  +mobile()
    left: $paddingLeftM
    bottom: $paddingTopM

.copyrightUnderProject
  +mobile()
    position: static
    margin-top: pxToRem(30)

.persian
  width: pxToRem(84)
  +mobile()
    width: pxToRem(31)

.contacts
  position: fixed
  left: $paddingLeft
  bottom: pxToRem(50)
  +mobile()
    display: none

